# vibe-transcripts

./: .gitignore  CLAUDE.md  LICENSE  Makefile  Procfile  README.md  summarize.py  transcribe.py
webapp/: pyproject.toml  shoreman.sh
webapp/src/video_transcribe_webapp/: __init__.py  app.py
webapp/src/video_transcribe_webapp/static/: script.js  style.css
webapp/src/video_transcribe_webapp/templates/: index.html
