[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project]
name = "video-transcribe-webapp"
version = "0.1.0"
description = "Flask web application for video file upload and transcription"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "openai>=1.0.0",
]